--- a/configs/git-generator-files-discovery/git-generator-files.yaml
+++ b/configs/git-generator-files-discovery/git-generator-files.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:  
   generators:  
     - git:  
-        repoURL: https://github.com/GITHUB_USERNAME/harness-gitops-workshop.git  
+        repoURL: https://github.com/akshayphadke-harness/harness-gitops-workshop.git  
         revision: HEAD  
         files:  
         - path: "configs/git-generator-files-discovery/cluster-config/**/config.json"  
@@ -13,7 +13,7 @@ spec:
     metadata:  
       name: '{{cluster.namespace}}-podinfo'  
     spec:  
-      project: ARGO_PROJECT_ID  
+      project: 994b21da  
       source:  
         repoURL: https://github.com/GITHUB_USERNAME/harness-gitops-workshop.git  
         targetRevision: HEAD  
